updating button hover color to address hover issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ input[type="text"], textarea {
 }
 
 .btn-default:hover {
-    color: #575861;
+    color: #e50000;
 }
 
 .p2::before {
